# emarecloud

./: .env.example  .gitignore  DOSYA_YAPISI.md  Dockerfile  EMARECLOUD_BRIFING.md  Emarecloud hafıza.md  PRODUCT_ROADMAP.md  README.md  YAZILIM_GELISTIRME.md  _diag.py  _port_uygula.py  ai_assistant.py  alert_manager.py  anahtarlar.py  app.py  audit.py  auth_routes.py  backup_manager.py  ceyiz_hazirla.py  command_security.py  config.json  config.py  crypto.py  deploy.json  docker-compose.yml  emare_messenger.py  emareapi_client.py  emarecloud.code-workspace  extensions.py  failover_monitor.py  firewall_manager.py  gunicorn.conf.py  license_manager.py  market_apps.py  market_apps.py.bak  migrate_tenant.py  models.py  network_manager.py  pyproject.toml  rbac.py  (+8 more)
.ai-locks/: LOCK-ORNEK-builder-ai-1.json  README.md
.github/: CODEOWNERS  YENI_MESAJ.md  copilot-instructions.md  pull_request_template.md
.github/workflows/: ai-lock-guard.yml  ci.yml
.tmp_migration/: asistan.emarecloud.tr.conf  emareasistan-bridge.service  emareasistan.service
blockchain/: __init__.py  contracts.py  reward_engine.py  service.py
core/: __init__.py  config_io.py  database.py  helpers.py  logging_config.py  middleware.py  tenant.py
docs/: 00_INDEX.md  01_GENEL_BAKIS.md  02_KURULUM_VE_HIZLI_BASLANGIC.md  03_KULLANIM_REHBERI.md  04_API_VE_MODULLER.md  05_YAZILIM_GELISTIRME_YOL_HARITASI.md  AI_ANAYASASI.md  AI_PLATFORM_TASARIMI.md  BLOCKCHAIN_ENTEGRASYON.md  BUSINESS_BUILDER_VIZYON.md  EMAREFIREWALL_CEYIZ.md  FATURALANDIRMA_SISTEMI.md  GITHUB_KURULUM.md  HOSTING_BUILDER.md  MODULERLESME_YOL_HARITASI.md  MULTI_TENANT_MIMARI.md  MVP_KAPSAM.md  POSTGRES_GECIS_PLANI.md  PRODUCT_ROADMAP.md  RBAC_ENDPOINT_MATRIX.md  REFACTOR_PLANI.md  SANAL_MAKINE_YONETIMI.md  SUNUCU_GUNCELLEME_REHBERI.md  TLS_REVERSE_PROXY.md
docs/AI_CALISMA/: AI_COKLU_GELISTIRME_PROTOKOLU.md  AI_ESZAMANLI_CALISMA_KILAVUZU.md  AI_GUNLUK_CALISMA_RUTINI.md
emarefirewall/: .dockerignore  .instructions.md  AGENTS.md  CHANGELOG.md  Dockerfile  HATA_AYIKLAMA.md  README.md  YAZILIM_GELISTIRME.md  __init__.py  __main__.py  app.py  cache.py  cli.py  config.py  docker-compose.isp.yml  docker-compose.yml  law5651.py  manager.py  pyproject.toml  requirements.txt  rmm.py  routes.py  ssh.py  store.py  tenants.py  test_all.py  wsgi.py
emarefirewall/.github/: copilot-instructions.md
emarefirewall/agent/: EmareAgent.ps1  EmareAgent.sh  Install-EmareAgent.ps1  Kur-EmareAgent.bat  Kur-EmareAgent.command  README.md  emare_agent.py  install-emareagent.sh
emarefirewall/deploy/: .env.example  README.md  deploy.sh  emaresecurityos.emarecloud.tr.conf  emaresecurityos.service
emarefirewall/templates/: firewall.html  logs.html
routes/: __init__.py  cloudflare.py  commands.py  datacenters.py  deploy.py  feedback.py  firewall.py  ide.py  logs.py  market.py  metrics.py  monitoring.py  organizations.py  pages.py  ports.py  scoreboard.py  servers.py  storage.py  terminal.py  token.py  virtualization.py  webdizayn.py
routes/domain_infra/: __init__.py
routes/domain_network/: __init__.py  network.py
routes/domain_ops/: __init__.py  metrics.py
static/css/: style.css
static/js/: app.js
templates/: ai_backup.html  ai_community_templates.html  ai_cost.html  ai_cross_cloud.html  ai_ethics.html  ai_gpu_pool.html  ai_isolation.html  ai_landing_gen.html  ai_logs.html  ai_market_intel.html  ai_marketplace.html  ai_mastery.html  ai_migration.html  ai_optimizer.html  ai_orchestrator.html  ai_performance.html  ai_revenue.html  ai_saas_builder.html  ai_sandbox.html  ai_security.html  ai_self_healing.html  ai_server_recommend.html  ai_training.html  ai_voice.html  ai_whitelabel.html  ai_wizard.html  app_builder.html  audit_logs.html  base.html  cloudflare.html  dashboard.html  datacenters.html  feedback_admin.html  firewall.html  ide.html  landing.html  market.html  monitoring.html  network_devices.html  scoreboard.html  (+7 more)
templates/admin/: audit.html  organizations.html  panel.html  users.html
templates/auth/: login.html  profile.html  register.html  verify_2fa.html
tests/: __init__.py  conftest.py  test_2fa.py  test_api_token.py  test_auth.py  test_config.py  test_market.py  test_monitoring.py  test_organization.py  test_pages.py  test_rbac.py  test_server.py
tools/: check_ai_locks.py  check_modular_boundaries.py
