[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "emarefirewall"
version = "1.0.0"
description = "Bağımsız güvenlik duvarı yönetim paketi — UFW & firewalld & fail2ban"
readme = "README.md"
license = {text = "Emare Collective License"}
authors = [{name = "Emare Collective"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
ssh = ["paramiko>=2.12.0"]
web = ["flask>=2.3.0"]
all = ["paramiko>=2.12.0", "flask>=2.3.0"]

[project.scripts]
emarefirewall = "emarefirewall.cli:main"

[tool.setuptools.packages.find]
include = ["emarefirewall*"]
