[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emare-security-os"
version = "1.14.0"
description = "Birleşik güvenlik platformu — Firewall, L7 Koruma, Ağ Analizi, RMM, ITSM, 5651 Uyumluluk"
readme = "README.md"
license = {text = "Emare Collective License"}
authors = [{name = "Emare Collective"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
ssh = ["paramiko>=2.12.0"]
web = ["flask>=2.3.0"]
isp = ["redis>=4.5.0", "psycopg2-binary>=2.9.0", "gunicorn>=21.2.0", "gevent>=23.9.0"]
all = ["paramiko>=2.12.0", "flask>=2.3.0", "redis>=4.5.0", "psycopg2-binary>=2.9.0", "gunicorn>=21.2.0", "gevent>=23.9.0"]

[project.scripts]
emare-security-os = "emarefirewall.cli:main"
emarefirewall = "emarefirewall.cli:main"

[tool.setuptools.packages.find]
include = ["emarefirewall*"]
